@@ -8,9 +8,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-
 import java.util.Collections;
 import java.util.List;
+
 /*
     This class configures CORS, and specifies which methods are allowed
     along with which origins and headers
@@ -19,19 +19,21 @@ import java.util.List;
  */
 @Configuration
 public class CorsConfig {
-    Logger logger = LoggerFactory.getLogger(CorsConfig.class);
-    public CorsFilter corsFilter(){
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000","https://objectstorage.us-phoenix-1.oraclecloud.com",
-                "https://petstore.swagger.io"));
-        config.setAllowedMethods(List.of("GET","POST","PUT","OPTIONS","DELETE","PATCH"));
-        config.setAllowedOrigins(Collections.singletonList("*"));
-        config.addAllowedHeader("*");
-        config.addExposedHeader("location");
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-        CorsFilter filter = new CorsFilter(source);
-        return filter;
-    }
+
+	Logger logger = LoggerFactory.getLogger(CorsConfig.class);
+
+	public CorsFilter corsFilter() {
+		CorsConfiguration config = new CorsConfiguration();
+		config.setAllowedOrigins(List.of("http://localhost:3000", "https://objectstorage.us-phoenix-1.oraclecloud.com",
+				"https://petstore.swagger.io"));
+		config.setAllowedMethods(List.of("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
+		config.setAllowedOrigins(Collections.singletonList("*"));
+		config.addAllowedHeader("*");
+		config.addExposedHeader("location");
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		source.registerCorsConfiguration("/**", config);
+		CorsFilter filter = new CorsFilter(source);
+		return filter;
+	}
 
 }
